
* Python 3 builds used to erroneously turn "bytes" into a tuple of integers
  instead of a buffer type object. Because this special-casing is important for
  performance when using massive buffers, this has been fixed in Python 3 so
  it matches the old Python 2 behavior. If you use arrays of VT_UI1 and expect
  get back tuples of integers, your code may break.

Since build 227:
----------------
* Support for for win32evtlog.EvtFormatMessage and EvtCreateRenderContext
 (#1308)

* Support more elements in the SECURITY_LOGON_SESSION_DATA struct
  returned by win32security.LsaGetLogonSession (#1515)

* Remove trailing \0 char from win32file.FindFileNames results (#1511)

* Added win32process.ReadProcessMemory/WriteProcessMemory (#1502)

* Added win32process.VirtualAllocEx/VirtualFreeEx (#1509)

* Added win32gui.ValidateRect (#1504)

* Adodbapi corrected and updated to version 2.6.2. With this change the pywin32
  repo will become the definitive source code for adodbapi, so files should never
  be missing again. Includes bug fix for 'named' paramstyle SF#28.
* Added a __repr__ implementation for PySecBufferDesc and PySecBuffer.

* Fix bug when trying to free a PySecBuffer object when the buffer was not
  allocated by the caller. This can occur when decrypting a message with a
  SECBUFFER_STREAM and SECBUFFER_DATA buffer when calling DecryptMessage().

Since build 226:
----------------
* Improved the search for pywin32 system DLLs logic. Useful when installed
  in virtual environments (#1442, @CristiFati)

* Added MAPI IMsgServiceAdmin2 interface (Nick Czeczulin, #1411)

Since build 225:
----------------
* The directory with the pywin32 system DLLs is now added to the start of PATH
  for version 3.7 and earlier, and passed to os.add_dll_directory() on 3.8 and
  later. This will hopefully work around problems loading pywintypes.dll in
  various situations.

* Conversions to and from COM VT_DATE types should no longer lose milliseconds.
